Fix hero stats overflow on mobile

--- a/docs/style.less
+++ b/docs/style.less
@@ -309,7 +309,7 @@ p {
     display: flex;
     align-items: center;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 
     &::before {
         content: '';
